--- a/css/screen.css
+++ b/css/screen.css
@@ -195,3 +195,18 @@ ul.posts {
   #related h2 {
     margin-bottom: 1em;
   }
+
+.maroon::selection {
+    background:maroon; 
+    color:#FF9966;
+}
+
+.maroon::-moz-selection {
+    background:maroon; 
+    color:#FF9966;
+}
+
+.maroon::-webkit-selection {
+    background:maroon;
+    color:#FF9966;
+}
