update index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <a href="/">许亮.中国</a>
     <a class="extra" href="/">home</a>
 	<br/>
-	<p>Where there is a wish,there is a way.</p>
+	<p>Across the Great Wall, we can reach every corner in the world.</p>
   </div>
   
   {{ content }}
@@ -25,7 +25,7 @@
   <div class="footer">
     <div class="contact">
       <p>
-        <a href="/">许亮.中国</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:liangxu@outlook.com">liangxu@outlook.com</a>
+        <a href="/">许亮.中国</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:xuliang.dec@gmail.com">xuliang.dec@gmail.com</a>
       </p>
     </div>
   </div>
