--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   <meta name="Keywords" content="{{ page.keywords }}"/>
+   <meta name="Description" content="{{ page.description }}" />
+
    <title>{{ page.title }}</title>
 
    <!-- syntax highlighting CSS -->
