--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
    <meta name="Keywords" content="{{ page.keywords }}"/>
    <meta name="Description" content="{{ page.description }}" />
 
-   <title>{{ page.title }}</title>
+   <title>Ironcurtain: {{ page.title }}</title>
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -17,7 +17,7 @@
 
 <div class="site">
   <div class="title">
-    <a href="/">许亮.中国</a>
+    <a href="/">ironcurtain.tk</a>
     <a class="extra" href="/">home</a>
 	<br/>
 	<p>Across the Great Wall, we can reach every corner in the world.</p>
@@ -28,7 +28,7 @@
   <div class="footer">
     <div class="contact">
       <p>
-        <a href="/">许亮.中国</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:xuliang.dec@gmail.com">xuliang.dec@gmail.com</a>
+        <a href="/">ironcurtain.tk</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:xuliang.dec@gmail.com">xuliang.dec@gmail.com</a>
       </p>
     </div>
   </div>
