change web title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
 <div class="site">
   <div class="title">
-    <a href="/">ironcurtain.tk</a>
+    <a href="/">Ironcurtain</a>
     <a class="extra" href="/">home</a>
 	<br/>
 	<p>Across the Great Wall, we can reach every corner in the world.</p>
