--- a/css/screen.css
+++ b/css/screen.css
@@ -17,6 +17,8 @@ html, body {
 
 body {
   background-color: white;
+  background-image: url(/images/iphone-stripe-bkg.png);
+  background-repeat: repeat;
   font: 13.34px helvetica, arial, clean, sans-serif;
   *font-size: small;
   text-align: center;
