--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
 <div class="site">
   <div class="title">
-    <a href="/">Ironcurtain</a>
+    <a href="/">慕容博</a>
     <a class="extra" href="/">home</a>
 	<br/>
 	<p>Across the Great Wall, we can reach every corner in the world.</p>
@@ -28,7 +28,7 @@
   <div class="footer">
     <div class="contact">
       <p>
-        <a href="/">ironcurtain.tk</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:xuliang.dec@gmail.com">xuliang.dec@gmail.com</a>
+        <a href="/">murongbo.tk</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:xuliang.dec@gmail.com">xuliang.dec@gmail.com</a>
       </p>
     </div>
   </div>
